# finantial_analyst_agent

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.yaml
cookbooks/: __init__.py
cookbooks/_shared/: __init__.py  compile_graph.py  compile_neo4j.py  config.py  credit_fields.py  db.py  db_duckdb.py  db_postgres.py  embeddings.py  init_neo4j.py  llm.py  neo4j_client.py  pii.py  pii_ner.py  pii_tokenizer.py  qa_tools.py  query.py  record_ingester.py
cookbooks/_shared/agents/: profiles.py  qa_agent.py  subagents.py
cookbooks/_shared/analytics/: anomalies.py  budgets.py  debt.py  forecast.py  goals.py  memo_lint.py  net_worth.py  spending.py
cookbooks/_shared/models/: __init__.py  _generated.py
cookbooks/_shared/ontology/: _naming.py  action_types.yaml  gen_all.py  gen_init_cypher.py  gen_pydantic.py  gen_schema_prompt.py  link_types.yaml  loader.py  meta.yaml  object_types.yaml
cookbooks/_shared/skills/: _generated_schema.md  citation-format.md  cypher-generation-style.md  merchant-resolution.md  pii-redaction.md  ptc-patterns.md
cookbooks/_shared/tools/: __init__.py  cypher_tools.py  graph_traversal.py  merchant_resolve.py  reconcile.py  safety.py  sql.py  sql_tools.py
cookbooks/advisor/: README.md  __main__.py  cli.py  graph.py  schemas.py  state.py
cookbooks/advisor/evals/: recommendation_kinds.yaml
cookbooks/advisor/nodes/: draft_recommendations.py  flag_uncertainties.py  lint_recommendations.py  load_context.py  publish_recommendations.py  report.py
cookbooks/advisor/skills/: concept-review-rubric.md  recommendation-rubric.md
cookbooks/api/: __main__.py  mcp_server.py  server.py
cookbooks/api/routers/: budgets.py  concept_reviews.py  decisions.py  forecast.py  goals.py  graph.py  graph_traversal.py  memos.py  merchants.py  net_worth.py  qa.py  recommendations.py  statements.py
cookbooks/knowledge_engine/: README.md  __main__.py  agent.py  cli.py  steering-examples.json
cookbooks/knowledge_engine/skills/: cypher-cookbook.md  qa-rubric.md
cookbooks/monthly_analyst/: README.md  __main__.py  cli.py  graph.py  schemas.py  state.py  steering-examples.json
cookbooks/monthly_analyst/evals/: memo_quality.yaml
cookbooks/monthly_analyst/nodes/: budget_variance.py  compute_goals.py  compute_net_worth.py  compute_rollups.py  detect_anomalies.py  draft_memo.py  forecast.py  lint_memo.py  load_period.py  publish.py  report.py
cookbooks/monthly_analyst/skills/: anomaly-thresholds.md  memo-rubric.md
cookbooks/statement_ingester/: README.md  __main__.py  cli.py  graph.py  schemas.py  state.py  steering-examples.json
cookbooks/statement_ingester/nodes/: categorise.py  compile.py  parse.py  (+4 more)
db/neo4j/: init.cypher
db/postgres/: alembic.ini
docker/: .env.example  docker-compose.yml
docs/: architecture.md  runbook-graph-viz.md  runbook-mcp.md  runbook-pii-models.md  runbook-postgres.md  runbook-rebuild-graph.md
eval/: matchers.py  report.py  runner.py
eval/adapters/: __init__.py  advisor.py  monthly_analyst.py  qa.py
scripts/: build-web.sh  check-egress.sh  dev.sh  migrate_wiki_to_postgres.py  setup.sh
tests/: conftest.py
tests/_shared/: test_actions.py  test_alembic_baseline.py  test_compile_graph.py  test_compile_neo4j.py  test_config.py  test_credit_fields.py  test_db.py  test_db_dispatcher.py  test_db_postgres.py  test_embeddings.py  test_gen_init_cypher.py  test_gen_pydantic.py  test_gen_schema_prompt.py  test_llm.py  test_neo4j_client.py  test_ontology_consistency.py  test_ontology_loader.py  test_ontology_naming.py  test_pii.py  test_pii_ner.py  test_pii_tokenizer.py  test_qa_tools.py  test_query.py  test_record_ingester.py  test_replay.py  test_sql_tool.py
tests/advisor/: test_cli.py  test_pipeline.py
tests/api/: test_forecast_router.py  test_goals_networth.py  test_graph_traversal_router.py  test_loopback_only.py  test_mcp_server.py  test_routers.py
tests/eval/: conftest.py  test_cookbook_suites.py  test_eval_runner.py
tests/fixtures/: synthetic_pdf.py
tests/knowledge_engine/: test_agent.py  test_cli.py
tests/monthly_analyst/: test_budget_variance.py  test_cli.py  test_forecast_node.py  test_graph_e2e.py  test_nodes.py  test_p7_memo.py
tests/scripts/: test_migrate_wiki.py
tests/statement_ingester/: test_backend_equivalence.py  test_categorise.py  test_cli.py  test_compile_node.py  test_graph_e2e.py  test_parse.py  test_real_backfill.py  test_real_format_parsers.py  test_recurring.py  test_schemas.py  test_upsert.py  test_validate.py
web/: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/components/: GraphView.tsx  MarkdownView.tsx  Sparkline.tsx
web/lib/: api-graph.ts  api.ts  wikilinks.tsx
(+58 files in other folders)
