[project]
name = "personal-finance-helper"
version = "0.1.0"
description = "Privacy-first local personal finance analyser, advisor, and budget manager."
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "duckdb>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "docling>=2.0",
    "markitdown>=0.0.1a3",
    "pandas>=2.2",
    "watchdog>=4.0",
]

[project.optional-dependencies]
graph = ["kuzu>=0.4"]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cookbooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
markers = [
    "integration: hits real Ollama or real PDFs (skip by default)",
    "needs_kuzu: requires the kuzu package",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true
