[project]
name = "personal-finance-helper"
version = "0.1.0"
description = "Privacy-first local personal finance analyser, advisor, and budget manager."
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2",
    "langchain-core>=1.3",
    "langchain-ollama>=1.1",
    "langgraph>=1.1",
    "pydantic>=2.13",
    "pyyaml>=6.0",
    "duckdb>=1.5",
    "typer>=0.21",
    "rich>=15.0",
    "docling>=2.93",
    "markitdown>=0.1",
    "pandas>=3.0",
    "watchdog>=6.0",
]

[project.optional-dependencies]
graph = ["kuzu>=0.11", "networkx>=3.6", "pyvis>=0.3"]
remote = ["langchain-openai>=1.2"]
web = ["fastapi>=0.115", "uvicorn>=0.32", "sse-starlette>=2.1", "httpx>=0.28"]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "reportlab>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cookbooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
markers = [
    "integration: hits real Ollama or real PDFs (skip by default)",
    "needs_kuzu: requires the kuzu package",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true
